# vger

./: .gitignore  .spi.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md  build.sh  metallib.sh  test.sh
.github/workflows/: build.yml
Demo/: README.md
Demo/Shared/: ContentView.swift  DemoView.swift  HelloView.swift  Renderer.swift  TigerView.swift  VgerDemo (iOS)-Bridging-Header.h  VgerDemoApp.swift  nanosvg.m
Demo/VgerDemo.xcodeproj/: project.pbxproj
Demo/VgerDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Playgrounds/Hello World.playground/: Contents.swift
Sources/vger/: BundleHelper.h  BundleHelper.m  Interval.h  accel.h  bezier.h  commands.h  metal_compat.h  paint.h  path.metal  prim.h  sdf.h  stb_rect_pack.cpp  vger.metal  vger.mm  vgerBundleHelper.h  vgerBundleHelper.m  vgerGlyphCache.h  vgerGlyphCache.mm  vgerGlyphPathCache.h  vgerGlyphPathCache.mm  vgerPathScanner.cpp  vgerPathScanner.h  vgerPathScanner.mm  vgerRenderer.h  vgerRenderer.mm  vgerScene.h  vgerTextureManager.h  vgerTextureManager.mm  vgerTileRenderer.h  vgerTileRenderer.mm  vger_private.h
Sources/vger/include/: vger.h  vgerRenderer.h  vger_types.h
Sources/vger/vger.docc/: Documentation.md
Sources/vgerSwift/: Context.swift  MTKView+ContentScaleFactor.swift  Renderer.swift  TextureHandle.swift  TextureRenderer.metal  TextureRenderer.swift  TileRenderer.swift  VgerTileView.swift  VgerView.swift
Sources/vgerSwift/vgerSwift.docc/: vgerSwift.md
Tests/vgerTests/: link.m  sdfTests.mm  testUtils.h  testUtils.mm  vgerGlyphCacheTests.mm  vgerPathScannerTests.mm  vgerTests.mm  vgerTextureManagerTests.mm
VgerDemo/Shared/: ContentView.swift  DemoView.swift
VgerDemo/VgerDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
VgerDemo/iOS/: VgerView.swift
VgerDemo/macOS/: MTKView+ContentScaleFactor.swift  VgerView.swift
